--- a/Origami/Resources/layout/activity_levelselect.xml
+++ b/Origami/Resources/layout/activity_levelselect.xml
@@ -1,40 +1,232 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/buttonBackgroundColor">
+    android:background="@color/backgroundColor">
 
-    <ImageButton
-        android:src="@drawable/back"
-        android:layout_width="75dp"
-        android:layout_height="45dp"
-        android:paddingTop="15dp"
-        android:paddingLeft="15dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/back_button"
-        android:background="@color/buttonBackgroundColor"
-        android:tint="@color/buttonColor"         
-    />
+    <LinearLayout
+        android:paddingLeft="19dp"
+        android:layout_width="83dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        android:text="назад"
-        android:paddingLeft="15dp"
-        android:textSize="13dp"
-        android:gravity="center"
-        android:textColor="@color/textColor"
-    />
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="match_parent"
+            android:layout_height="77dp"
+            android:background="@drawable/roundedBottomCorners"
+            android:backgroundTint="@color/baseColor"
+            android:src="@drawable/back"
+            android:scaleType="fitEnd"
+            android:tint="@color/iconColor"
+            android:paddingHorizontal="12dp"
+            android:paddingBottom="15dp"
+        />
+    </LinearLayout>
 
-    <GridView
-        android:id="@+id/level_grid"
+     <ScrollView
+        android:translationZ="10px"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center"
-        android:numColumns="3"
-        android:verticalSpacing="30dp"
-        android:stretchMode="columnWidth"
-    />
+        android:fadeScrollbars="false"
+        android:fadingEdge="vertical"
+        android:fadingEdgeLength="10dp"
+        android:requiresFadingEdge="vertical"
+        android:overScrollMode="never"
+        android:scrollbarThumbVertical="@drawable/scrollbarThumb"
+        android:scrollbarTrackVertical="@drawable/scrollbarTrack"
+        android:scrollbarSize="15dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="32dp"
+        android:background="@drawable/roundedLeftcorners"
+        android:backgroundTint="@color/secondaryColor"
+        android:clipToPadding="true">
+
+        <LinearLayout
+            android:paddingVertical="10dp"
+            android:paddingRight="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
+            android:orientation="vertical">
+
+             <LinearLayout
+                 android:id="@+id/first_row"
+                 android:paddingBottom="16dp"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal">
+
+                 <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include android:id="@+id/lvl0" layout="@layout/level_icon"/>
+                 </LinearLayout>
+                    
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include android:id="@+id/lvl1" layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include android:id="@+id/lvl2" layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include android:id="@+id/lvl3" layout="@layout/level_icon"/>
+                 </LinearLayout>
+            </LinearLayout>
+
+             <LinearLayout
+                 android:id="@+id/second_row"
+                 android:paddingVertical="16dp"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal">
+
+                 <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+                    
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+            </LinearLayout>
+
+             <LinearLayout
+                 android:id="@+id/third_row"
+                 android:paddingVertical="16dp"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal">
+
+                 <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+                    
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+            </LinearLayout>
+
+             <LinearLayout
+                 android:id="@+id/fourth_row"
+                 android:paddingTop="16dp"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal">
+
+                 <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+                    
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+
+                <LinearLayout
+                     android:layout_width="fill_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:gravity="center">
+
+                     <include layout="@layout/level_icon"/>
+                 </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
