--- a/Origami/Resources/layout/no_hints_modal.xml
+++ b/Origami/Resources/layout/no_hints_modal.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:translationZ="2dp"
-        android:layout_width="155dp"
-        android:layout_height="155dp"
+        android:layout_width="187dp"
+        android:layout_height="142dp"
         android:orientation="vertical"
         android:background="@drawable/roundedCorners"
         android:backgroundTint="@color/baseColor">
@@ -17,37 +17,27 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Level 1"
-            android:gravity="center"
-            android:textColor="@color/thirdColor"
-            android:textSize="20dp"
-            android:layout_marginTop="12dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Failed!"
+            android:text="No more hints"
             android:gravity="center"
             android:textColor="@color/thirdColor"
             android:textSize="18dp"
-            android:layout_marginVertical="6dp"/>
+            android:layout_marginVertical="15dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="fill_horizontal"
-            android:layout_marginVertical="10dp">
+            android:gravity="fill_horizontal">
 
-            <ImageButton
-                android:id="@+id/back"
+            <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginLeft="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/undo"
+                android:layout_marginLeft="22dp"
+                android:padding="12dp"
+                android:src="@drawable/buy"
                 android:tint="@color/iconColor"
-                android:backgroundTint="@color/baseColor"
+                android:background="@drawable/roundedcorners"
+                android:backgroundTint="@color/accentColor"
             />
 
             <LinearLayout
@@ -55,15 +45,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
 
-            <ImageButton
-                android:id="@+id/restart"
+            <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginRight="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/restart"
+                android:layout_marginRight="22dp"
+                android:padding="12dp"
+                android:src="@drawable/ads"
                 android:tint="@color/iconColor"
-                android:backgroundTint="@color/baseColor"
+                android:background="@drawable/roundedcorners"
+                android:backgroundTint="@color/accentColor"
             />
         </LinearLayout>
     </LinearLayout>
